[gd_scene load_steps=3 format=3 uid="uid://dsmvm0ril0ns6"]

[ext_resource type="Script" path="res://Scripts/CraftingUI.gd" id="1_efw2r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhvr5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efw2r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 567.0
offset_top = 312.0
offset_right = 607.0
offset_bottom = 352.0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_mhvr5")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = -39.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 157.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/ScrollContainer"]
layout_mode = 2
tooltip_text = "sadasdasdasdasdasdas"
metadata/_edit_use_anchors_ = true

[node name="RecipeLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.15
anchor_top = -0.225
anchor_right = 8.15
anchor_bottom = -0.225
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="CraftButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.125
anchor_top = 2.375
anchor_right = 3.125
anchor_bottom = 2.375
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(2.16, 2.16)
text = "CRAFT"
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.125
anchor_top = -2.15
anchor_right = 3.125
anchor_bottom = -2.15
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(2.16, 2.16)
text = "EXIT"
metadata/_edit_use_anchors_ = true
